crates/rpc-cli/tests/snapshots/typescript__snapshot_adjacent_tagged.snap
---
source: crates/rpc-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by vercel-rpc-cli. Do not edit manually.
// Re-run `rpc generate` or use `rpc watch` to regenerate.

export type Message = { t: "Text"; c: string } | { t: "Binary"; c: [string, number] } | { t: "Ping" } | { t: "Data"; c: { key: string; value: string } };

export type Procedures = {
  queries: {
  };
  mutations: {
  };
};
