crates/rpc-cli/tests/snapshots/typescript__snapshot_bigint_types.snap
---
source: crates/rpc-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by vercel-rpc-cli. Do not edit manually.
// Re-run `rpc generate` or use `rpc watch` to regenerate.

export interface Stats {
  count: number;
  total_bytes: bigint;
  max_value: bigint;
  ids: bigint[];
  optional_big: bigint | null;
}

export type Procedures = {
  queries: {
    get_stats: { input: void; output: Stats };
  };
  mutations: {
  };
};
