crates/rpc-cli/tests/snapshots/typescript__snapshot_branded_newtypes.snap
---
source: crates/rpc-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by vercel-rpc-cli. Do not edit manually.
// Re-run `rpc generate` or use `rpc watch` to regenerate.

export type UserId = string & { readonly __brand: "UserId" };

export interface User {
  id: number;
  name: string;
}

export type Coords = [number, number];

export type Procedures = {
  queries: {
    get_user: { input: UserId; output: User };
  };
  mutations: {
  };
};
