crates/rpc-cli/tests/snapshots/typescript__snapshot_complete_types.snap
---
source: crates/rpc-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by vercel-rpc-cli. Do not edit manually.
// Re-run `rpc generate` or use `rpc watch` to regenerate.

export interface TimeResponse {
  timestamp: number;
  message: string;
}

export interface CreateInput {
  title: string;
  count: number;
}

export interface Item {
  id: number;
  title: string;
  tags: string[];
}

export type Procedures = {
  queries: {
    hello: { input: string; output: string };
    time: { input: void; output: TimeResponse };
  };
  mutations: {
    create_item: { input: CreateInput; output: Item };
  };
};
