crates/rpc-cli/tests/snapshots/typescript__snapshot_empty_manifest.snap
---
source: crates/rpc-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by vercel-rpc-cli. Do not edit manually.
// Re-run `rpc generate` or use `rpc watch` to regenerate.

export type Procedures = {
  queries: {
  };
  mutations: {
  };
};
