crates/rpc-cli/tests/snapshots/typescript__snapshot_generic_struct.snap
---
source: crates/rpc-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by vercel-rpc-cli. Do not edit manually.
// Re-run `rpc generate` or use `rpc watch` to regenerate.

export interface Paginated<T> {
  items: T[];
  total: number;
  page: number;
}

export interface User {
  id: number;
  name: string;
}

export type Procedures = {
  queries: {
    list_users: { input: void; output: Paginated<User> };
  };
  mutations: {
  };
};
