crates/rpc-cli/tests/snapshots/typescript__snapshot_serde_rename_all.snap
---
source: crates/rpc-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by vercel-rpc-cli. Do not edit manually.
// Re-run `rpc generate` or use `rpc watch` to regenerate.

export interface UserProfile {
  firstName: string;
  lastName: string;
  createdAt: number;
}

export type Procedures = {
  queries: {
  };
  mutations: {
  };
};
